@@ -22,18 +22,11 @@
 #include <glibtop/netload.h>
 #include "backend.h"
 
-const char* dummy_devices[] = { "lo", "dummy", NULL }; 
-
 gboolean
 is_no_dummy_device(const char* device)
 {
-	const char **dev = dummy_devices;
-	for (; *dev != NULL; dev++) {
-		if (strncmp(device, *dev, strlen(*dev)) == 0)
-			return FALSE;
-	}
-	return TRUE;
-}	
+	return !g_str_has_prefix(device, "lo") && !g_str_has_prefix(device, "dummy");
+}
 
 
 /* Check for all available devices. This really should be
