@@ -1,3 +1,7 @@
+2006-08-06  Benoît Dejean  <benoit@placenet.org>
+
+	* src/backend.c: (is_no_dummy_device): Reworked.
+
 2006-07-22  Benoît Dejean  <benoit@placenet.org>
 
 	* src/backend.h:
